--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "scss": "^0.2.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
