--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,22 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "next": "12.1.4",
+    "ramda": "^0.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-loading-skeleton": "^3.0.3",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.11",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.23",
+    "@types/ramda": "^0.28.8",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
