--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "ramda": "^0.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-loading-skeleton": "^3.0.3",
+    "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
