--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "next": "12.1.4",
+    "nextjs-progressbar": "^0.0.14",
     "ramda": "^0.28.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
